@@ -45,6 +45,7 @@ export(reverb)
 export(schwa)
 export(segment)
 export(semitonesToHz)
+export(shiftFormants)
 export(soundgen)
 export(soundgen_app)
 export(specToMS)
